# End-to-End_Insurance_Risk_Analytics_Predictive-Modeling

./: .gitignore  README.md  artifacts.dvc  pyproject.toml  requirements.txt
.dvc/: config
configs/: data.yaml  dvc.yaml
notebooks/: Hypotheses_testing.ipynb  insurance_data_EDA.ipynb
scripts/: run_pipeline.py
src.egg-info/: SOURCES.txt
src/analysis/: preprocess.py  visualization.py
src/hypothsis/: a_btest.py
src/modeling/: data_load.py  data_preprocessing.py  interpritibility.py  model_building.py  model_evalution.py
src/utility/: MLexception.py  config_loader.py  data_loader.py  logger.py
tests/: test_config_loader.py  test_custom_exception.py  test_logger.py
