[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "src"                
version = "0.1.0"
description = "ML pipelines"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]          

[tool.setuptools.package-dir]
"src" = "src"
